--- a/application.json
+++ b/application.json
@@ -19,7 +19,7 @@
   "color": "#C7F3E3",
   "embedSetting": {
     "height": "720px",
-    "showNavigationBar": true,
+    "showNavigationBar": false,
     "width": "1024px"
   },
   "evaluationVersion": 2,
