log in page set 1

--- a/application.json
+++ b/application.json
@@ -30,7 +30,11 @@
       "isDefault": true
     },
     {
-      "id": "Dashboard",
+      "id": "AdminPage",
+      "isDefault": false
+    },
+    {
+      "id": "UserPage",
       "isDefault": false
     }
   ],
